--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
             <li>клиренс — 105 мм;</li>
             <li>объем багажника — 315 л.</li>
           </ul>
+          <div class="gab">
           <img
             alt="Габариты"
             class="adaptive lazyloaded"
             src="./casImg/size.webp"
           />
+        </div>
           <h2>таблица характеристик</h2>
           <table class="info-table"><tbody><tr><td>Название породы</td>
             <td>Акита-ину</td>
