--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <img
             alt="Габариты"
             class="adaptive lazyloaded"
-            src="./casImg/size.webp"
+            src="./casImg/unknown-transformed.png"
           />
         </div>
           <h2>таблица характеристик</h2>
